--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: #f1f5f8;
+  background: #59aded;
   color: #222;
 }
 
@@ -16,7 +16,24 @@ body {
   max-width: 1170px;
   margin: 5rem auto;
   display: grid;
-  grid-gap: 2rem;
+  padding: 0.3rem 0.3rem;
+  border-radius: 0.5rem;
+  /* 3 items per row on large screens */
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+/* 2 items per row on medium screens */
+@media screen and (max-width: 992px) {
+  .book-list {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+/* 1 item per row on small screens */
+@media screen and (max-width: 576px) {
+  .book-list {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -26,16 +43,21 @@ body {
 }
 
 .book {
-  background: #fff;
-  padding: 0.5rem 1rem;
-  border-radius: 0.25rem;
+  background: rgb(147, 153, 154);
+  padding: 0.1rem 0.1rem;
+  border-radius: 1rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   transition: all 0.3s linear;
   cursor: pointer;
+  align-items: center;
+  width: 30%;
+  margin: 0 0.5rem 1rem 0.5rem;
 }
 
 .book:hover {
   transform: scale(1.05);
+
+  box-shadow: 0 0 20px rgba(91, 110, 112, 0.1);
 }
 
 .book h1 {
@@ -49,4 +71,10 @@ body {
   margin-bottom: 0.5rem;
   color: #777;
   font-family: 'Roboto Mono', monospace;
+}
+
+.book--cover {
+  width: 50%;
+  height: 50%;
+  border-radius: 0.5rem;
 }
